re PR target/54902 (, ICE (segfault) building on arm-linux-gnueabi)

2012-10-25  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/54902
	* tree-ssa-pre.c (fini_pre): Return TODO.
	(execute_pre): Adjust.
	* tree-ssa-tailmerge.c (tail_merge_optimize): Delete unreachable
	blocks before computing dominators.

	* g++.dg/torture/pr54902.C: New testcase.

From-SVN: r192803